rocksdb/rocksdb/lib/librocksdb.nim


proc rocksdb_multi_get*(db: ptr rocksdb_t; options: ptr rocksdb_readoptions_t;
                       num_keys: csize_t; keys_list: cstringArray;
                       keys_list_sizes: ptr csize_t; values_list: cstringArray;
                       values_list_sizes: ptr csize_t; errs: cstringArray) {.cdecl,
    importc: "rocksdb_multi_get", dynlib: librocksdb.}
proc rocksdb_multi_get_with_ts*(db: ptr rocksdb_t;
                               options: ptr rocksdb_readoptions_t;
                               num_keys: csize_t; keys_list: cstringArray;
                               keys_list_sizes: ptr csize_t;
                               values_list: cstringArray;
                               values_list_sizes: ptr csize_t;
                               timestamp_list: cstringArray;
                               timestamp_list_sizes: ptr csize_t;
                               errs: cstringArray) {.cdecl,
    importc: "rocksdb_multi_get_with_ts", dynlib: librocksdb.}
proc rocksdb_multi_get_cf*(db: ptr rocksdb_t; options: ptr rocksdb_readoptions_t;
    column_families: ptr ptr rocksdb_column_family_handle_t; num_keys: csize_t;
                          keys_list: cstringArray; keys_list_sizes: ptr csize_t;
                          values_list: cstringArray;
                          values_list_sizes: ptr csize_t; errs: cstringArray) {.
    cdecl, importc: "rocksdb_multi_get_cf", dynlib: librocksdb.}
proc rocksdb_multi_get_cf_with_ts*(db: ptr rocksdb_t;
                                  options: ptr rocksdb_readoptions_t;
    column_families: ptr ptr rocksdb_column_family_handle_t; num_keys: csize_t;
                                  keys_list: cstringArray;
                                  keys_list_sizes: ptr csize_t;
                                  values_list: cstringArray;
                                  values_list_sizes: ptr csize_t;
                                  timestamps_list: cstringArray;
                                  timestamps_list_sizes: ptr csize_t;
                                  errs: cstringArray) {.cdecl,
    importc: "rocksdb_multi_get_cf_with_ts", dynlib: librocksdb.}
##  The MultiGet API that improves performance by batching operations
##  in the read path for greater efficiency. Currently, only the block based
##  table format with full filters are supported. Other table formats such
##  as plain table, block based table with block based filters and
##  partitioned indexes will still work, but will not get any performance
##  benefits.
##
##  Note that all the keys passed to this API are restricted to a single
##  column family.
##
##  Parameters -
##  db - the RocksDB instance.
##  options - ReadOptions
##  column_family - ColumnFamilyHandle* that the keys belong to. All the keys
##                  passed to the API are restricted to a single column family
##  num_keys - Number of keys to lookup
##  keys_list - Pointer to C style array of keys with num_keys elements
##  keys_list_sizes - Pointer to C style array of the size of corresponding key
##    in key_list with num_keys elements.
##  values - Pointer to C style array of PinnableSlices with num_keys elements
##  statuses - Pointer to C style array of Status with num_keys elements
##  sorted_input - If true, it means the input keys are already sorted by key
##                 order, so the MultiGet() API doesn't have to sort them
##                 again. If false, the keys will be copied and sorted
##                 internally by the API - the input array will not be
##                 modified

proc rocksdb_batched_multi_get_cf*(db: ptr rocksdb_t;
                                  options: ptr rocksdb_readoptions_t; column_family: ptr rocksdb_column_family_handle_t;
                                  num_keys: csize_t; keys_list: cstringArray;
                                  keys_list_sizes: ptr csize_t;
                                  values: ptr ptr rocksdb_pinnableslice_t;
                                  errs: cstringArray; sorted_input: bool) {.cdecl,
    importc: "rocksdb_batched_multi_get_cf", dynlib: librocksdb.}
##  The value is only allocated (using malloc) and returned if it is found and
##  value_found isn't NULL. In that case the user is responsible for freeing it.

proc rocksdb_key_may_exist*(db: ptr rocksdb_t; options: ptr rocksdb_readoptions_t;
                           key: cstring; key_len: csize_t; value: cstringArray;
                           val_len: ptr csize_t; timestamp: cstring;
                           timestamp_len: csize_t; value_found: ptr uint8): uint8 {.
    cdecl, importc: "rocksdb_key_may_exist", dynlib: librocksdb.}
##  The value is only allocated (using malloc) and returned if it is found and
##  value_found isn't NULL. In that case the user is responsible for freeing it.

proc rocksdb_key_may_exist_cf*(db: ptr rocksdb_t;
                              options: ptr rocksdb_readoptions_t; column_family: ptr rocksdb_column_family_handle_t;
                              key: cstring; key_len: csize_t; value: cstringArray;
                              val_len: ptr csize_t; timestamp: cstring;
                              timestamp_len: csize_t; value_found: ptr uint8): uint8 {.
    cdecl, importc: "rocksdb_key_may_exist_cf", dynlib: librocksdb.}
proc rocksdb_create_iterator*(db: ptr rocksdb_t; options: ptr rocksdb_readoptions_t): ptr rocksdb_iterator_t {.
    cdecl, importc: "rocksdb_create_iterator", dynlib: librocksdb.}
proc rocksdb_get_updates_since*(db: ptr rocksdb_t; seq_number: uint64;
                               options: ptr rocksdb_wal_readoptions_t;
                               errptr: cstringArray): ptr rocksdb_wal_iterator_t {.
    cdecl, importc: "rocksdb_get_updates_since", dynlib: librocksdb.}
proc rocksdb_create_iterator_cf*(db: ptr rocksdb_t;
                                options: ptr rocksdb_readoptions_t; column_family: ptr rocksdb_column_family_handle_t): ptr rocksdb_iterator_t {.
    cdecl, importc: "rocksdb_create_iterator_cf", dynlib: librocksdb.}
proc rocksdb_create_iterators*(db: ptr rocksdb_t; opts: ptr rocksdb_readoptions_t;
    column_families: ptr ptr rocksdb_column_family_handle_t;
                              iterators: ptr ptr rocksdb_iterator_t; size: csize_t;
                              errptr: cstringArray) {.cdecl,
    importc: "rocksdb_create_iterators", dynlib: librocksdb.}
proc rocksdb_create_snapshot*(db: ptr rocksdb_t): ptr rocksdb_snapshot_t {.cdecl,
    importc: "rocksdb_create_snapshot", dynlib: librocksdb.}
proc rocksdb_release_snapshot*(db: ptr rocksdb_t; snapshot: ptr rocksdb_snapshot_t) {.
    cdecl, importc: "rocksdb_release_snapshot", dynlib: librocksdb.}
##  Returns NULL if property name is unknown.
##    Else returns a pointer to a malloc()-ed null-terminated value.

proc rocksdb_property_value*(db: ptr rocksdb_t; propname: cstring): cstring {.cdecl,
    importc: "rocksdb_property_value", dynlib: librocksdb.}
##  returns 0 on success, -1 otherwise

proc rocksdb_property_int*(db: ptr rocksdb_t; propname: cstring; out_val: ptr uint64): cint {.
    cdecl, importc: "rocksdb_property_int", dynlib: librocksdb.}
##  returns 0 on success, -1 otherwise
